update javafx note