@@ -3,3 +3,8 @@
 --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
 --add-exports chartfx/io.fair_acc.chartfx.ui.utils=ALL-UNNAMED
 ```
+
+
+--add-opens javafx.graphics/javafx.scene=chartfx
+--add-exports javafx.graphics/javafx.scene=samples
+--add-exports javafx.graphics/com.sun.javafx.scene=samples
